5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1575_1333.log
== TEST (2019-03-12 12:43:47) 
-- CODE:
expressao = 30-3**2+//3**2*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30-3**2+//3**2*10
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:45:41) 
-- CODE:
expressao = 30-3 ** 2+//3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30-3 ** 2+//3 ** 2 * 10
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:47:29) 
-- CODE:
expressao =29//90
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30-3 ** 2+//3 ** 2 * 10
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:47:35) 
-- CODE:
expressao =29//90
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30-3 ** 2+//3 ** 2 * 10
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:47:37) 
-- CODE:
expressao =29//90
print(expressao)
-- EXECUTION TIME:
0.155726
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:48:15) 
-- CODE:
expressao =30-9+8//9*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:48:17) 
-- CODE:
expressao =30-9+8//9*10
print(expressao)
-- EXECUTION TIME:
0.221569
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
